set overflow-x to auto for score field

--- a/src/templates/courses_x_assignments_x.html
+++ b/src/templates/courses_x_assignments_x.html
@@ -95,7 +95,7 @@ Due Date: {{ formatted_due_date|e }}{% endif %}</pre>
 
 {% if takes_course or instructs_course %}
 <style type="text/css">
-.table td:first-child {
+.table td:first-child, .table td:nth-child(2) {
   overflow-x: auto;
   max-width: 25em;
 }
