--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
 <h2>About Grade Oven</h2>
-<p>Grade Oven, written by <abbr title="Mikel Dmitri Mcdaniel">Mikel Mcdaniel</abbr>, is a minimalist web server where instructors can make assignments to build/run/grade student code.  In practice, it's more flexible than that, but the main goal is allow students to submit programming assignments and get instant feedback with a focus on security (protecting the server from potentially malicious students).
+<p>Grade Oven, <a href="https://github.com/mikelmcdaniel/grade-oven/">written by Mikel Mcdaniel</a>, is a minimalist web server where instructors can make assignments to build/run/grade student code.  In practice it's more flexible than that but the main goal is allow students to submit programming assignments and get instant feedback with a focus on security (protecting the server from potentially malicious students).
 </p>
 {% endblock %}
