Use display_name instead of username for "logged in as" banner.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Grade Oven</a> {% if username %}<span class="navbar-brand">(logged in as {{ username|e }})</span>{% endif %}
+      <a class="navbar-brand" href="/">Grade Oven</a> {% if display_name %}<span class="navbar-brand">(logged in as {{ display_name|e }})</span>{% endif %}
     </div>
     <div class="navbar-collapse collapse" aria-expanded="false" style="height: 0.8px;">
       <ul class="nav navbar-nav">
