--- a/src/templates/courses_x_assignments_x.html
+++ b/src/templates/courses_x_assignments_x.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<h2>Course {{ course_name|e }} Assignment {{ assignment_name|e }}</h2>
+<h2>Course <a href="/courses/{{ course_name|e }}">{{ course_name|e }}</a> Assignment {{ assignment_name|e }}</h2>
 {% if stages_desc or formatted_due_date %}
 <pre>{{ stages_desc|e }}{% if formatted_due_date %}
 Due Date: {{ formatted_due_date|e }}{% endif %}</pre>
