--- a/src/templates/courses_x_assignments_x_submissions.html
+++ b/src/templates/courses_x_assignments_x_submissions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<h2>Course {{ course_name|e }} Assignment {{ assignment_name|e }} Submissions</h2>
+<h2>Course <a href="/courses/{{ course_name|e }}">{{ course_name|e }}</a> Assignment <a href="/courses/{{ course_name|e }}/assignments/{{ assignment_name|e }}">{{ assignment_name|e }}</a> Submissions</h2>
 {% if instructs_course %}
 {% for student_submission in student_submissions %}
 <div id="{{ student_submission.student_username|e }}" class="panel panel-primary">
